[metadata]
name = qyout
version = 0.1
author = guitouu31
description  = Qt Youtube downloader GUI using yt-dlp and pyqt6 (say "cute")
url = https://github.com/guitouu31/qyout.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Environment :: X11 Applications :: Qt
    Topic :: Utilities

[options]
install_requires =
    pyqt6
    yt-dlp
python_requires = >=3.6

[options.entry_points]
console_scripts =
    qyout = qyout.main:main
